k8s/provision/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development-randomquotes
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-randomquotes
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging-randomquotes
---
apiVersion: v1
kind: Namespace
metadata:
  name: production-randomquotes
