k8s/provision/argocd-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway-nginx  
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-gateway-route-nginx
spec:
  parentRefs:
  - name: argo-gateway-nginx
  hostnames:
  - "argocd.local"  
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: svc/argocd-server
        port: 443
